<resources>
    <string name="app_name">D/L Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="type_and_format_header">Select Format and Type</string>
    <string name="format_header">Format of Match</string>
    <string name="type_and_format_desc">Welcome to Duckworth-Lewis Calculator,\nTo get started, please choose the format and type of match.</string>
    <string-array name="format_entries">
        <item>One Day International (ODI)</item>
        <item>One Day Domestic/Club (ODD)</item>
        <item>T20 International (T20I)</item>
        <item>T20 Domestic/Club (T20D)</item>
    </string-array>
    <string name="type_header">Type of Match</string>
    <string-array name="type_entries">
        <item>Standard Test Playing Nations</item>
        <item>Under 19/ Under 17/ Under 15 Teams</item>
        <item>Women\'s Cricket Matches</item>
        <item>Associate Nations</item>
    </string-array>
    <string name="type_and_format_next_button_text">Next - Enter Details for Team 1</string>

    <string name="team1_details_header">Details for Team 1</string>
    <string name="team1_details_desc">Please select the appropriate values:</string>
    <string name="team1_details2_desc">No. of overs allocated at the start:\nEnter overs followed by balls after the decimal (e.g. 23.2 or 45.0)</string>
    <string name="team1_overs_header">Overs:</string>
    <string name="team1_suspension_header">Add/Edit match suspensions here (if any):</string>
    <string name="team1_add_edit_suspension_button_text">Add/Edit Suspensions for Team 1</string>
    <string name="team1_final_score_header">Total Runs for Team 1:</string>
    <string name="team1_details_next_button_text">Next - Enter Details for Team 2</string>
    <string name="team1_overs_desc">Default is 50 overs for One-Day, 20 overs for T20</string>

    <string name="team2_details_header">Details for Team 2</string>
    <string name="team2_details_desc">Please select the appropriate values:</string>
    <string name="team2_details2_desc">No. of overs allocated at the start:\nEnter overs followed by balls after the decimal (e.g. 23.2 or 45.0)</string>
    <string name="team2_overs_header">Overs:</string>
    <string name="team2_suspension_header">Add/Edit match suspensions here (if any):</string>
    <string name="team2_add_edit_suspension_button_text">Add/Edit Suspensions for Team 2</string>
    <string name="team2_final_score_header">Total Runs for Team 2:</string>
    <string name="team2_final_score_desc">(Enter total runs only if match is over)</string>
    <string name="team2_details_next_button_text">Next - Get Final Result</string>
    <string name="team2_overs_desc">Default is the number of overs alloted to Team 1</string>

    <string name="final_result_header">Final Result</string>
    <string name="calculate_final_result_button_text">Calculate Final Result</string>
    <string name="final_result_status">Team 2 need 250 runs to win from 45 overs with 10 wickets remaining (D/L Method)</string>
    <string name="final_result_status_wait">Calculating Result. Please wait … </string>

    <string name="title_activity_suspensions">Add/Edit Suspensions</string>

    <string name="suspensions_list_header">Suspensions List</string>
    <string name="add_new_suspension_button_text">Add a new Suspension</string>
    <string name="suspensions_list_empty_text">No suspensions added yet.</string>
    <string name="suspensions_list_non_empty_text">Tap on a suspension to edit, Long Tap to delete it. </string>

    <string name="add_suspension_header">Add New Suspension</string>
    <string name="edit_suspension_header">Edit Suspension</string>
    <string name="suspension_score_text_desc">Runs scored\nbefore suspension:</string>
    <string name="suspension_wickets_text_desc">Wickets lost\nbefore suspension:</string>
    <string name="suspension_overs_before_text_desc">Overs left\nbefore suspension:</string>
    <string name="suspension_overs_after_text_desc">Overs left\nafter suspension:</string>
    <string name="suspension_add_button_text">Add suspension</string>
    <string name="suspension_reset_button_text">Reset fields</string>
    <string name="suspension_save_edits_button_text">Save Edits</string>
    <string name="suspension_delete_button_text">Delete suspension</string>

    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id">ca-app-pub-1746548249634631/1446733301</string>

    <string name="about_us_header">About the Duckworth/Lewis Method</string>
    <string name="about_us_content">The Duckworth/Lewis Method is used for calculation of revised targets in rain-interrupted limited-overs matches.
The calculations depend on the relative run scoring resources (overs and wickets) available to the two sides.\n\nPlease
        note that this application uses the Duckworth/Lewis Standard Edition
    which is the one made available for free by the ICC.\n\nPlease
        refer to the <a href="http://icc-live.s3.amazonaws.com/cms/media/about_docs/542b84d41b3c2-The%20D_L%20methodology%20-%20Answers%20to%20Frequently%20Asked%20Questions.docx">ICC Duckworth/Lewis FAQ (doc)</a>
        to know about the Professional Edition and the recently introduced Stern Edition.
        To know more about D/L method, read the <a href="http://icc-live.s3.amazonaws.com/cms/media/about_docs/542b8685a3693-06]%20Duckworth%20Lewis_2014.pdf">Duckworth Lewis Guide (pdf)</a> on <a href="http://www.icc-cricket.com/">ICC website</a></string>

    <string name="menu_item_share">Share</string>
    <string name="menu_item_rate">Rate us!</string>
    <string name="menu_item_help">About DLC</string>

    <string name="about_us_share_button_text">Share this app</string>
    <string name="about_us_rate_button_text">Rate us!</string>

    <string name="title_activity_dlsplash_screen">DLSplashScreenActivity</string>
    <string name="title_activity_dlmain">Duckworth Lewis (D/L) Calculator</string>
</resources>
