<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.fl.dlc.FinalResultFragment">

    <TextView
        android:id="@+id/final_result_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/final_result_header"
        android:textSize="30sp" />

    <Button
        android:id="@+id/calculate_final_result_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/calculate_final_result_button_text" />

    <TextView
        android:id="@+id/final_result_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/final_result_status" />

</LinearLayout>
